# minecraft-snapshot-discord

./: database.py  main.py  pyproject.toml  server.py  summary.py  webhook.py
minecraft/: __init__.py
minecraft_blog/: __init__.py
