[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "minecraft-auto-snapshot"
version = "0.1.0"
[tool.poetry.dependencies]
aiohttp = "^3.6"
dnspython = "^1.16"
motor = "^2.1"
python = "^3.8"
python-dotenv = "^0.15.0"
[tool.poetry.dev-dependencies]
